--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,7 @@ python_functions = test_*
 testpaths = tests
 norecursedirs = generated .git .venv __pycache__ *.egg-info
 collect_ignore = ["generated", "examples", "build"]
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    integration: marks tests as integration tests
+    compatibility: marks tests as version compatibility tests
