--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,49 +1,110 @@
 repos:
-  # Schema Gen hooks
+  # Schema Gen specific hooks (using our own published hooks)
+  # Temporarily disabled until we have actual schemas to validate
+  # - repo: local
+  #   hooks:
+  #     - id: schema-gen-validate
+  #       name: Validate generated schemas
+  #       entry: uv run schema-gen validate
+  #       language: system
+  #       pass_filenames: false
+  #       files: '\.py$'
+  #       stages: [pre-commit]
+
   - repo: local
     hooks:
-      # Validate schemas are up-to-date before commit
-      - id: schema-gen-validate
-        name: Validate generated schemas
-        entry: schema-gen validate
-        language: system
-        pass_filenames: false
-        files: '\.py$'
-        stages: [commit]
-
-      # Auto-generate schemas when schema definitions change
       - id: schema-gen-generate
         name: Generate schemas
-        entry: schema-gen generate
+        entry: uv run schema-gen generate
         language: system
         pass_filenames: false
         files: '(schemas/.*\.py|\.schema-gen\.config\.py)$'
 
-  # Standard Python linting and formatting
+      # Run version compatibility tests
+      - id: schema-gen-compatibility
+        name: Version compatibility check
+        entry: uv run python scripts/check_compatibility.py --current-only
+        language: system
+        pass_filenames: false
+        files: 'src/schema_gen/generators/.*\.py$'
+        stages: [pre-push]
+
+  # File and content validation
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v6.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
+      - id: check-toml
+      - id: check-json
+      - id: check-xml
       - id: check-added-large-files
+        args: ['--maxkb=1000']
+      - id: check-case-conflict
       - id: check-merge-conflict
+      - id: check-symlinks
+      - id: check-executables-have-shebangs
       - id: debug-statements
+      - id: detect-private-key
+      - id: fix-byte-order-marker
+      - id: mixed-line-ending
+        args: [--fix=lf]
 
-  - repo: https://github.com/psf/black
-    rev: 24.8.0
+  # Python security and quality checks (temporarily disabled)
+  # - repo: https://github.com/PyCQA/bandit
+  #   rev: 1.8.6
+  #   hooks:
+  #     - id: bandit
+  #       args: ['-r', 'src/', '-ll']
+  #       exclude: '^tests/'
+
+  # - repo: https://github.com/adamchainz/blacken-docs
+  #   rev: 1.19.1
+  #   hooks:
+  #     - id: blacken-docs
+  #       additional_dependencies: [black>=24.0.0]
+
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.20.0
     hooks:
-      - id: black
-        args: [--line-length=88]
+      - id: pyupgrade
+        args: [--py312-plus]
 
+  # Linting and formatting (Ruff replaces Black, isort, and multiple linters)
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.6.9
+    rev: v0.12.12
     hooks:
       - id: ruff
-        args: [--fix]
+        args: [--fix, --exit-non-zero-on-fix]
+      - id: ruff-format
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.11.2
+  # Type checking with mypy (temporarily disabled for faster iteration)
+  # - repo: https://github.com/pre-commit/mirrors-mypy
+  #   rev: v1.17.1
+  #   hooks:
+  #     - id: mypy
+  #       additional_dependencies:
+  #         - pydantic>=2.11.0
+  #         - types-PyYAML
+  #         - types-requests
+  #         - sqlalchemy>=2.0.0
+  #       args: [--ignore-missing-imports, --install-types, --non-interactive]
+
+  # Documentation quality (temporarily disabled)
+  # - repo: https://github.com/pycqa/pydocstyle
+  #   rev: 6.3.0
+  #   hooks:
+  #     - id: pydocstyle
+  #       args: [--convention=google, --add-ignore=D100,D101,D102,D103,D104,D105]
+
+  # Test validation (run on push only to avoid slow commits)
+  - repo: local
     hooks:
-      - id: mypy
-        additional_dependencies: [pydantic>=2.0.0]
+      - id: pytest-check
+        name: pytest-check
+        entry: uv run pytest tests/ --maxfail=1 -q
+        language: system
+        pass_filenames: false
+        always_run: true
+        stages: [pre-push]
