--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pyyaml>=6.0.2",
     "jsonschema>=4.25.1",
     "graphql-core>=3.2.6",
+    "pathway>=0.26.1",
 ]
 keywords = ["schema", "pydantic", "sqlalchemy", "fastapi", "code-generation"]
 classifiers = [
