--- a/tests/test-matrix.yml
+++ b/tests/test-matrix.yml
@@ -1,40 +1,29 @@
 # Version compatibility matrix for testing schema generators
-# This file defines the supported versions for each target library
+# This file defines the latest supported versions for each target library
+# Testing is focused on Python 3.12+ with current latest versions
 
 version_matrix:
-  # Python libraries with version dependencies
+  # Python libraries with version dependencies (latest versions only)
   pydantic:
-    - "2.9.0"   # Stable release
-    - "2.10.0"  # Recent stable
-    - "2.11.0"  # Latest stable
     - "2.11.7"  # Current latest
 
   sqlalchemy:
-    - "2.0.25"  # Stable release
-    - "2.0.36"  # Recent stable
     - "2.0.43"  # Current latest
 
   pathway:
-    - "0.8.0"   # Recent
-    - "0.9.0"   # Stable
     - "0.26.1"  # Current latest
 
-  # Schema/serialization libraries with Python packages
+  # Schema/serialization libraries with Python packages (latest versions only)
   avro:
-    - "1.11.0"  # Stable
     - "1.12.0"  # Latest
 
   protobuf:
-    - "4.25.0"  # Stable 4.x
     - "5.28.0"  # Latest 5.x
 
   jsonschema:
-    - "4.17.0"  # Stable 4.x
-    - "4.21.0"  # Recent 4.x
     - "4.23.0"  # Latest 4.x
 
   graphql-core:
-    - "3.2.0"   # Stable
     - "3.2.3"   # Latest stable
 
   # JSON Schema specification versions (for syntax validation)
@@ -42,43 +31,38 @@ version_matrix:
     - "draft-07"      # JSON Schema Draft 7
     - "draft/2020-12" # JSON Schema Draft 2020-12
 
-  # Language/runtime versions for non-Python generators
+  # Language/runtime versions for non-Python generators (latest versions only)
   # These don't have Python package dependencies but we track compatibility
   languages:
     typescript:  # For Zod generator
-      - "5.0.0"    # Stable
       - "5.6.0"    # Latest
 
     java:        # For Jackson generator
-      - "11"       # LTS
-      - "17"       # LTS
       - "21"       # Current LTS
 
     kotlin:      # For Kotlin generator
-      - "1.9.0"    # Stable
       - "2.0.0"    # Latest
 
     graphql:     # For GraphQL generator
-      - "16.8.0"   # Stable
       - "16.9.0"   # Latest
 
-# Test scenarios for each version
+# Test scenarios for Python 3.12+ with modern syntax
 test_scenarios:
   basic_schema:
-    description: "Basic schema with common field types"
+    description: "Basic schema with common field types using modern Python 3.12+ syntax"
     fields:
       - "id: int"
       - "name: str"
       - "email: str"
-      - "age: Optional[int]"
+      - "age: int | None"  # Modern union syntax
 
   advanced_schema:
     description: "Advanced schema with constraints and relationships"
     fields:
       - "id: int with primary_key"
       - "username: str with constraints"
-      - "tags: List[str]"
-      - "metadata: Dict[str, Any]"
+      - "tags: list[str]"  # Modern generic syntax
+      - "metadata: dict[str, Any]"  # Modern generic syntax
 
   validation_schema:
     description: "Schema with extensive validation rules"
