--- a/pytest.ini
+++ b/pytest.ini
@@ -1,10 +1,9 @@
-[tool:pytest]
+[pytest]
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 testpaths = tests
-norecursedirs = generated .git .venv __pycache__ *.egg-info
-collect_ignore = ["generated", "examples", "build"]
+norecursedirs = generated .git .venv __pycache__ *.egg-info build examples
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
