--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ dev = [
     "pymdown-extensions>=10.16.1",
     "pytest>=8.4.2",
     "pytest-cov>=6.3.0",
+    "setuptools<81",  # Pin setuptools to avoid pkg_resources deprecation warnings
 ]
 
 # Ruff configuration
