--- a/.github/workflows/comprehensive-test.yml
+++ b/.github/workflows/comprehensive-test.yml
@@ -210,8 +210,7 @@ jobs:
         time uv run schema-gen generate \
           --input perf_test/schemas \
           --output perf_test/generated \
-          --target pydantic --target dataclasses --target typeddict --target sqlalchemy \
-          --verbose
+          --target pydantic --target dataclasses --target typeddict --target sqlalchemy
 
         # Validate generated files
         echo "Validating large generated files..."
