--- a/Dockerfile.validation
+++ b/Dockerfile.validation
@@ -166,10 +166,10 @@ fi
 
 # Run validation tests
 echo "🧪 Running format validation tests..."
-uv run --system pytest tests/test_format_validation.py -v
+pytest tests/test_format_validation.py -v
 
 echo "🔍 Running comprehensive format validation..."
-uv run --system python scripts/validate_all_formats.py --verbose
+python scripts/validate_all_formats.py --verbose
 
 echo "🐍 Testing Python format libraries..."
 python3 scripts/test_python_formats.py
