--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -231,31 +231,32 @@ jobs:
         echo "changelog=$CHANGELOG" >> $GITHUB_OUTPUT
 
     - name: Create GitHub Release
-      uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref_name }}
-        release_name: "🚀 Schema Gen v${{ needs.build-and-test.outputs.version }}"
-        body: |
-          ## 📦 What's New in v${{ needs.build-and-test.outputs.version }}
+      run: |
+        PRERELEASE_FLAG=""
+        if [[ "${{ github.ref_name }}" == *"alpha"* ]] || [[ "${{ github.ref_name }}" == *"beta"* ]] || [[ "${{ github.ref_name }}" == *"rc"* ]]; then
+          PRERELEASE_FLAG="--prerelease"
+        fi
 
-          ${{ steps.changelog.outputs.changelog }}
+        gh release create "${{ github.ref_name }}" \
+          --title "🚀 Schema Gen v${{ needs.build-and-test.outputs.version }}" \
+          --notes "## 📦 What's New in v${{ needs.build-and-test.outputs.version }}
 
-          ## 🔗 Installation
+        ${{ steps.changelog.outputs.changelog }}
 
-          ```bash
-          pip install schema-gen==${{ needs.build-and-test.outputs.version }}
-          ```
+        ## 🔗 Installation
 
-          ## 🔗 Links
+        \`\`\`bash
+        pip install schema-gen==${{ needs.build-and-test.outputs.version }}
+        \`\`\`
 
-          - 📦 [PyPI Package](https://pypi.org/project/schema-gen/${{ needs.build-and-test.outputs.version }}/)
-          - 📚 [Documentation](https://github.com/jagatsingh/schema-gen#readme)
-          - 🐛 [Report Issues](https://github.com/jagatsingh/schema-gen/issues)
+        ## 🔗 Links
 
-        draft: false
-        prerelease: ${{ contains(github.ref_name, 'alpha') || contains(github.ref_name, 'beta') || contains(github.ref_name, 'rc') }}
+        - 📦 [PyPI Package](https://pypi.org/project/schema-gen/${{ needs.build-and-test.outputs.version }}/)
+        - 📚 [Documentation](https://github.com/jagatsingh/schema-gen#readme)
+        - 🐛 [Report Issues](https://github.com/jagatsingh/schema-gen/issues)" \
+          $PRERELEASE_FLAG
 
   post-publish-notification:
     needs: [build-and-test, publish-pypi]
